[package]
name = "pkcs11-macros"
version = "0.1.0"
description = "Auxiliary macros for type generation"
edition = "2024"
rust-version = "1.89"
keywords = ["pkcs11", "cryptoki"]
categories = ["cryptography"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
