[package]
name = "pkcs11"
version = "0.1.0"
description = "A Rust implementation of the PKCS#11 API"
edition = "2024"
readme = "README.md"
rust-version = "1.89"
keywords = ["pkcs11", "cryptoki"]
categories = ["cryptography"]
license = "Apache-2.0"

[dependencies]
pkcs11-macros = { path = "../pkcs11-macros" }
libloading = "0.9"
serial_test = "3.4.0"
bitflags = "2.11"
secrecy = "0.10"

[[example]]
name = "common"
path = "examples/common.rs"
crate-type = ["staticlib"]
